// Database: perkuliahan — selaras dengan database/perkuliahan.sql
// Tempel di editor: https://dbdiagram.io/ (format DBML)

Project perkuliahan {
  database_type: 'MySQL'
  Note: '''
    Praktikum Pemrograman Web 2 — ERD akademik + tabel pengguna (studi kasus login).
    Impor SQL: database/perkuliahan.sql
  '''
}

Table prodi {
  id_prodi int [pk, increment, note: 'UNSIGNED']
  kode_prodi varchar(20) [not null, unique]
  nama_prodi varchar(160) [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  Note: 'Program studi'
}

Table dosen {
  id_dosen int [pk, increment, note: 'UNSIGNED']
  nidn varchar(20) [not null, unique]
  nama varchar(120) [not null]
  email varchar(120)
  id_prodi int [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  indexes {
    id_prodi
  }
  Note: 'Dosen; bertugas pada satu prodi'
}

Table mahasiswa {
  id_mahasiswa int [pk, increment, note: 'UNSIGNED']
  nim varchar(20) [not null, unique]
  nama varchar(120) [not null]
  email varchar(120)
  angkatan int [not null, note: 'MySQL YEAR']
  id_prodi int [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  indexes {
    id_prodi
  }
  Note: 'Mahasiswa; terdaftar pada satu prodi'
}

Table matakuliah {
  id_mk int [pk, increment, note: 'UNSIGNED']
  kode_mk varchar(20) [not null, unique]
  nama_mk varchar(160) [not null]
  sks tinyint [not null, default: 3, note: 'UNSIGNED']
  id_dosen int [not null]
  id_prodi int [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  indexes {
    id_dosen
    id_prodi
  }
  Note: 'Mata kuliah milik satu prodi; satu dosen pengampu'
}

Table krs {
  id_krs int [pk, increment, note: 'UNSIGNED']
  id_mahasiswa int [not null]
  id_mk int [not null]
  semester varchar(10) [not null, note: "ENUM MySQL: 'gasal','genap'"]
  tahun_ajaran varchar(9) [not null, note: 'Format YYYY/YYYY']
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  indexes {
    (id_mahasiswa, id_mk, semester, tahun_ajaran) [unique, name: 'uq_krs_ambil']
    id_mahasiswa
    id_mk
  }
  Note: 'KRS: ambil MK (se-prodi divalidasi di aplikasi)'
}

Table nilai {
  id_nilai int [pk, increment, note: 'UNSIGNED']
  id_krs int [not null, unique]
  nilai_angka decimal(5,2) [not null]
  nilai_huruf char(2) [not null]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`, note: 'MySQL ON UPDATE']
  Note: 'Satu baris nilai per KRS (1:1)'
}

Table pengguna {
  id_pengguna int [pk, increment, note: 'UNSIGNED']
  username varchar(50) [not null, unique]
  password_hash varchar(255) [not null, note: 'bcrypt dari password_hash()']
  nama_tampilan varchar(120) [not null]
  peran varchar(20) [not null, default: 'operator', note: "ENUM MySQL: 'admin','operator'"]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  Note: 'Studi kasus login; tidak berelasi ke tabel akademik'
}

Ref: dosen.id_prodi > prodi.id_prodi [delete: restrict, update: cascade]

Ref: mahasiswa.id_prodi > prodi.id_prodi [delete: restrict, update: cascade]

Ref: matakuliah.id_dosen > dosen.id_dosen [delete: restrict, update: cascade]

Ref: matakuliah.id_prodi > prodi.id_prodi [delete: restrict, update: cascade]

Ref: krs.id_mahasiswa > mahasiswa.id_mahasiswa [delete: cascade, update: cascade]

Ref: krs.id_mk > matakuliah.id_mk [delete: restrict, update: cascade]

Ref: krs.id_krs - nilai.id_krs [delete: cascade, update: cascade]
